crates/sith_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_invalid_annotation.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/ann_assign_stmt_invalid_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..63,
        body: [
            AnnAssign(
                AnnAssignStmt {
                    range: 0..11,
                    target: Name(
                        NameExpr {
                            range: 0..1,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    annotation: Starred(
                        StarredExpr {
                            range: 3..7,
                            value: Name(
                                NameExpr {
                                    range: 4..7,
                                    id: Name("int"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 12..26,
                    target: Name(
                        NameExpr {
                            range: 12..13,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    annotation: Yield(
                        YieldExpr {
                            range: 15..22,
                            value: Some(
                                Name(
                                    NameExpr {
                                        range: 21..22,
                                        id: Name("a"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 25..26,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 27..46,
                    target: Name(
                        NameExpr {
                            range: 27..28,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    annotation: YieldFrom(
                        YieldFromExpr {
                            range: 30..42,
                            value: Name(
                                NameExpr {
                                    range: 41..42,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 45..46,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: true,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 47..51,
                    target: Name(
                        NameExpr {
                            range: 47..48,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 50..51,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            Assign(
                AssignStmt {
                    range: 55..62,
                    targets: [
                        Name(
                            NameExpr {
                                range: 55..58,
                                id: Name("int"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 61..62,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x: *int = 1
  |    ^^^^ Syntax Error: Starred expression cannot be used here
2 | x: yield a = 1
3 | x: yield from b = 1
  |


  |
1 | x: *int = 1
2 | x: yield a = 1
  |    ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | x: yield from b = 1
4 | x: y := int = 1
  |


  |
1 | x: *int = 1
2 | x: yield a = 1
3 | x: yield from b = 1
  |    ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | x: y := int = 1
  |


  |
2 | x: yield a = 1
3 | x: yield from b = 1
4 | x: y := int = 1
  |      ^^ Syntax Error: Expected a statement
  |
